# jit_shipper

./: .gitmodules  Cargo.toml  README.md  versions.json
src/: backend.rs  config.rs  install.rs  libimobiledevice_bindings.rs  main.rs  tui.rs  ui.rs  user_input.rs
