[package]
name = "jit_shipper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "*"
serde_json = "*"
dirs = "*"
reqwest = { version = "*", features = ["blocking"] }
zip = "*"

[build-dependencies]
bindgen = "*"