[package]
name = "jit_shipper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
dirs = "*"
reqwest = { version = "*", features = ["blocking"] }
zip = "*"
rusty_libimobiledevice = { version = "*", path="../rusty_libimobiledevice", features = ["static"] }
regex = "*"
eframe = "*"
dialoguer = "*"

[build-dependencies]
bindgen = "*"